UC8: Filter Passenger Bogies using Streams with Test Cases