@@ -1,59 +1,54 @@
 import java.util.*;
+import java.util.stream.Collectors;
+
+class Bogie {
+    String name;
+    int capacity;
+
+    Bogie(String name, int capacity) {
+        this.name = name;
+        this.capacity = capacity;
+    }
+
+    @Override
+    public String toString() {
+        return name + " - Capacity: " + capacity;
+    }
+}
 
 public class TrainConsistManagementApp {
 
-    static class Bogie {
-        String name;
-        int capacity;
-
-        Bogie(String name, int capacity) {
-            this.name = name;
-            this.capacity = capacity;
-        }
-
-        public String toString() {
-            return name + " - Capacity: " + capacity;
-        }
-    }
-
     public static void main(String[] args) {
 
-        // ================= UC7 =================
-        System.out.println("=== UC7: Sort Bogies by Capacity ===");
+        // UC8: Filter Passenger Bogies Using Streams
 
+        System.out.println("=== UC8: Filter Passenger Bogies Using Streams ===");
+
+        // Create Bogie List (reuse UC7 style)
         List<Bogie> bogies = new ArrayList<>();
 
         bogies.add(new Bogie("Sleeper", 72));
         bogies.add(new Bogie("AC Chair", 56));
         bogies.add(new Bogie("First Class", 24));
+        bogies.add(new Bogie("Second Sitting", 90));
 
-        bogies.sort(Comparator.comparingInt(b -> b.capacity));
-
+        System.out.println("\nAll Bogies:");
         for (Bogie b : bogies) {
             System.out.println(b);
         }
 
-
-        // ================= UC8 =================
-        System.out.println("\n=== UC8: Filter Passenger Bogies Using Streams ===");
-
-        List<Bogie> bogieList = new ArrayList<>();
-
-        bogieList.add(new Bogie("Sleeper", 72));
-        bogieList.add(new Bogie("AC Chair", 56));
-        bogieList.add(new Bogie("First Class", 24));
-        bogieList.add(new Bogie("Super Luxury", 80));
-
+        // Filter bogies with capacity > 60
         List<Bogie> filteredBogies =
-                bogieList.stream()
+                bogies.stream()
                         .filter(b -> b.capacity > 60)
-                        .toList();
+                        .collect(Collectors.toList());
 
-        System.out.println("Bogies with capacity greater than 60:");
+        System.out.println("\nFiltered Bogies (Capacity > 60):");
 
         for (Bogie b : filteredBogies) {
             System.out.println(b);
         }
 
+        System.out.println("\nUC8 Execution Completed.");
     }
 }
